# csv-expander

./: .gitignore  README.md  main.py  package.py  pyproject.toml
.github/workflows/: check-lint-format.yml  publish-binaries.yml  test.yml
src/csv_expander/: __init__.py  cli.py  expand.py
tests/: test_csv_expander.py
