[tool.poetry]
name = "csv-expander"

# See: https://github.com/python-poetry/poetry/pull/2366#issuecomment-652418094
# For info on poetry versioning for Python < 3.8
version = "0.1.0"

description = "A poetry-based python-project template with settings and tools that I typically use."
authors = ["Robin Kennedy-Reid <rlkennedyreid@carneddau.cymru>"]
packages = [
    { include = "csv_expander", from = "src" },
]

[tool.poetry.scripts]
csv-expander = "csv_expander.__main__:main"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
pydantic = {extras = ["dotenv"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
typer = {extras = ["all"], version = "^0.12.5"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pylint = "^3.3.1"
mypy = "^1.11.2"
ruff = "^0.6.9"
taskipy = "^1.13.0"
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.mypy]
files = ["src", "tests"]

# [[tool.mypy.overrides]]
# module = [
#   "module_to_ignore.*",
# ]
# ignore_missing_imports = true

# See links below on exluding directories from pyright (and thus pylance)
# https://github.com/microsoft/pylance-release/issues/642#issuecomment-732175189
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md#sample-config-file
[tool.pyright]
include = ["src"]
# exclude = ["exclude_dir/"]

[tool.taskipy.tasks.lint]
cmd = "task lint_ruff && task lint_mypy"
help = "runs all lint checks"

[tool.taskipy.tasks]
test = { cmd = "pytest" }
format = { cmd = "ruff format" }
lint_ruff = { cmd = "ruff check" }
lint_mypy = { cmd = "mypy" }
post_format = { cmd = "task lint" }
pre_test = { cmd = "task format" }
